Fixed overflow

--- a/story/css/ending.css
+++ b/story/css/ending.css
@@ -7,6 +7,7 @@ html {
 }
 
 .data-container {
+    height: 100%;
     position: absolute;
     left: 50%;
     top: 40%;
@@ -114,10 +115,7 @@ br {
     margin-top: 5%;
 }
 
-@media only screen and (max-height: 775px) {
-    .hoverArea{
-        margin-top: 100%;
-    }
+@media only screen and (max-height: 850px) {
     .tooltiptext {
         display: none !important;
     }
@@ -137,6 +135,6 @@ br {
         text-align: center;
         float: right;
         margin-top: 10%;
-        margin-bottom: 10%;
+        margin-bottom: 200px;
     }
 }
